--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -139,20 +139,20 @@ device {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive, 
-bind = $mainMod, M, exit, 
+bind = $mainMod, R, exit, 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, M, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, G, exec, google-chrome-stable
+bind = $mainMod, D, exec, discord
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
