--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -153,6 +153,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, G, exec, google-chrome-stable
 bind = $mainMod, D, exec, discord
+bind = $mainMod, S, exec, steam
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
