--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -17,7 +17,6 @@
             "memory",
             "pulseaudio",
             "pulseaudio#microphone",
-            "tray",
             "hyprland/language",
         ],
 
@@ -93,8 +92,8 @@
         },
 
         "memory": {
-   	    "interval": 15,
-	    "format": "󰍛 {used:0.1f}G/{total:0.1f}G"
+   	   "interval": 15,
+	   "format": "󰍛 {used:0.1f}G/{total:0.1f}G"
         },
 
         "temperature": {
@@ -163,7 +162,9 @@
             "custom/launch_wofi",
             "custom/launch_chrome",
             "custom/launch_dolphin",
-            "custom/launch_kitty"
+            "custom/launch_kitty",
+            "custom/launch_discord",
+            "custom/launch_steam"
         ],
         "modules-center": ["wlr/taskbar"],
         "modules-right": ["tray", "network#ethernet"],
@@ -204,6 +205,18 @@
             "on-click": "sh -c '(sleep 0.5s; pkill wofi || wofi -c ~/.config/wofi/config-lmenu)' & disown",
             "tooltip": false
         },
+
+        "custom/launch_discord": {
+            "format": "󰙯",
+            "on-click": "discord",
+            "tooltip": false
+        },
+        
+        "custom/launch_steam": {
+            "format": "",
+            "on-click": "steam",
+            "tooltip": false
+        },  
 
         "wlr/taskbar": {
             "format": "{icon}",
