--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -39,6 +39,8 @@ env = WLR_NO_HARDWARE_CURSORS,1
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 
+env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
