--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -18,7 +18,12 @@ exec-once=systemctl --user import-environment QT_QPA_PLATFORMTHEME
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once=swww-init
+exec-once=mako
+exec-once=nm-applet --indicator
+exec-once=wl-paste --watch cliphist store
 exec=~/.config/waybar-start.sh
+exec-once=dbus-update-activation-environment --systemd --all
+exec-once=systemctl --user import-environment QT_QPA_PLATFORMTHEME
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -38,8 +43,6 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
-
-env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -129,17 +132,25 @@ misc {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
+windowrule = float,^(pavucontrol)$
+windowrule = float,^(nm-connection-editor)$
+windowrule = float,^(dolphin)$
+windowrule = float,^(google-chrome-stable)$
+windowrule = float, title:^(btop)$
+
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = opacity 0.9 0.9,class:^(kitty)$
+windowrulev2 = animation popin,class:^(dolphin)$
+windowrulev2 = opacity 0.8 0.8,class:^(dolphin)$
+windowrulev2 = animation popin,class:^(google-chrome-stable)$
+windowrulev2 = move cursor -3% -105%,class:^(wofi)$
+windowrulev2 = noanim,class:^(wofi)$
+windowrulev2 = opacity 0.8 0.6,class:^(wofi)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
