--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -55,9 +55,9 @@
         },
 
         "clock": {
-            "format": "{:%I:%M:%S %p}  ",
+            "format-alt": "{:%I:%M:%S %p}  ",
             "interval": 1,
-            "format-alt": "{:%A, %B %d, %Y (%r)}  ",
+            "format": "{:%A, %B %d, %Y (%r)}  ",
             "tooltip-format": "\n<span size='9pt' font='JetbrainsMono Nerd Font'>{calendar}</span>",
             "calendar": {
                         "mode"          : "year",
@@ -92,8 +92,8 @@
         },
 
         "memory": {
-   	   "interval": 15,
-	   "format": "󰍛 {used:0.1f}G/{total:0.1f}G"
+   	  "interval": 15,
+	  "format": "󰍛 {used:0.1f}G/{total:0.1f}G"
         },
 
         "temperature": {
