--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,7 +12,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once=~/.config/hypr/xdg-portal-hyprland
+#exec-once=~/.config/hypr/xdg-portal-hyprland
 exec-once=dbus-update-activation-environment --all
 exec-once=systemctl --user import-environment QT_QPA_PLATFORMTHEME
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
