--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,8 +12,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-#exec-once=~/.config/hypr/xdg-portal-hyprland
-exec-once=dbus-update-activation-environment --all
+exec-once=dbus-update-activation-environment --systemd --all
 exec-once=systemctl --user import-environment QT_QPA_PLATFORMTHEME
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -22,8 +21,6 @@ exec-once=mako
 exec-once=nm-applet --indicator
 exec-once=wl-paste --watch cliphist store
 exec=~/.config/waybar-start.sh
-exec-once=dbus-update-activation-environment --systemd --all
-exec-once=systemctl --user import-environment QT_QPA_PLATFORMTHEME
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -32,6 +29,7 @@ exec-once=systemctl --user import-environment QT_QPA_PLATFORMTHEME
 $terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show drun
+$browser = google-chrome-stable
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -43,6 +41,7 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -152,6 +151,13 @@ windowrulev2 = move cursor -3% -105%,class:^(wofi)$
 windowrulev2 = noanim,class:^(wofi)$
 windowrulev2 = opacity 0.8 0.6,class:^(wofi)$
 
+# XWayland Video Bridge
+#windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+#windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+#windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+#windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
+#windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
@@ -164,7 +170,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, M, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, G, exec, google-chrome-stable
+bind = $mainMod, G, exec, $browser
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
